# eipmcp

./: .gitignore  README.md  pyproject.toml
src/eipmcp/: __init__.py  cli.py  config.py  crossrefs.py  eips.py  github_api.py  hardforks.py  openrpc.py  recent.py  repos.py  server.py  specs.py  storage.py  sync.py
tests/: test_crossrefs.py  test_eips.py  test_fts_backfill.py  test_hardforks.py  test_openrpc.py  test_recent.py  test_reindex_deltas.py  test_repos.py  test_search_specs.py  test_storage.py  test_storage_fts.py  test_sync_resilience.py  test_sync_ttl.py
