[project]
name = "eipmcp"
version = "0.2.0"
description = "MCP server for fetching, indexing, and diffing Ethereum EIPs and specs"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12",
    "python-frontmatter>=1.1",
    "platformdirs>=4.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
eipmcp = "eipmcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eipmcp"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
